refactoring to java standard indents